# CGMF

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  __init__.py  setup.py
.github/workflows/: cmake.yml
data/: CMspectra_vs_mass_Cf252.txt  CMspectra_vs_mass_Pu239.txt  CMspectra_vs_mass_U235.txt
examples/: run_cgmf.py  run_cgmf_mpi.py
libcgmf/: CMakeLists.txt
libcgmf/include/: FissionFragments.h  Yields.h  cgm.h  cgmfEvents.h  cgmfEvents_capi.h  config-ff.h  config.h  dimensions.h  etc.h  evapinterface.h  excinterface.h  exciton.h  gdr.h  gkdNeutron.hpp  global.h  kcksyst.h  kinematics.h  maths.h  mchf.h  ompNeutron.hpp  optical.h  physics.h  privategrid.h  ripl2levels.h  rngcgm.h  structur.h  terminate.h  uomps.h
libcgmf/src/: CMakeLists.txt  FissionFragments.cpp  Yields.cpp  asympt.cpp  builtin.cpp  cgmfEvents.cpp  cgmfEvents_capi.cpp  config-doxygen  etc.cpp  evapinterface.cpp  excilambda.cpp  excinterface.cpp  exciparm.cpp  excipop.cpp  exciton.cpp  extwave.cpp  gamcas.cpp  gampop.cpp  gdr.cpp  gkdNeutron.cpp  gtrans.cpp  intwave.cpp  kcksyst.cpp  kinematics.cpp  levden.cpp  masstable.cpp  omcalc.cpp  ompNeutron.cpp  omsetform.cpp  omsetparm.cpp  output.cpp  parpop.cpp  popinit.cpp  ripl2levels.cpp  setup.cpp  smatrix.cpp  specevap.cpp  speclab.cpp  specmain.cpp  specmc.cpp  (+2 more)
pyCGMF/: CMakeLists.txt  __init__.py  convenience_funcs.py  pyCGMF.cpp
pyCGMF/examples/: run_cgmf.py  run_cgmf_mpi.py
tools/: setup.py
tools/CGMFtk/: __init__.py  histories.py  yields.py
utils/cgmf/: CMakeLists.txt  cgmf.cpp
